// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tsc > accessor in type literal 1`] = `
"// accessor-in-type-literal.d.ts
//#region tests/fixtures/accessor-in-type-literal.d.ts
export declare function makeBox(): {
  get value(): number;
};
//#endregion"
`;

exports[`tsc > arktype 1`] = `
"// arktype.d.ts
//#region tests/fixtures/arktype.d.ts
export declare const test: import("arktype/internal/variants/object.ts").ObjectType<{
  test: string;
}, {}>;
//#endregion"
`;

exports[`tsc > compiler project sourcemap (build: false) 2`] = `
"// index.d.ts
//#region tests/fixtures/deep-source-map/src/index.d.ts
export declare const a = 1;
//#endregion
//# sourceMappingURL=index.d.ts.map
// index.d.ts.map
{"version":3,"file":"index.d.ts","names":[],"sources":["../src/index.ts"],"mappings":";qBAAa"}
// index.js
//#region tests/fixtures/deep-source-map/src/index.ts
const a = 1;
//#endregion
export { a };

//# sourceMappingURL=index.js.map
// index.js.map
{"version":3,"file":"index.js","names":[],"sources":["../src/index.ts"],"sourcesContent":["export const a = 1\\n"],"mappings":";AAAA,MAAa,IAAI"}"
`;

exports[`tsc > compiler project sourcemap (build: true) 2`] = `
"// index.d.ts
//#region tests/fixtures/deep-source-map/src/index.d.ts
export declare const a = 1;
//#endregion
//# sourceMappingURL=index.d.ts.map
// index.d.ts.map
{"version":3,"file":"index.d.ts","names":[],"sources":["../src/index.ts"],"mappings":";qBAAa"}
// index.js
//#region tests/fixtures/deep-source-map/src/index.ts
const a = 1;
//#endregion
export { a };

//# sourceMappingURL=index.js.map
// index.js.map
{"version":3,"file":"index.js","names":[],"sources":["../src/index.ts"],"sourcesContent":["export const a = 1\\n"],"mappings":";AAAA,MAAa,IAAI"}"
`;

exports[`tsc > composite references incremental 1`] = `
"// input1.d.ts
//#region tests/fixtures/composite-refs-incremental/dir1/input1.d.ts
export declare const input1 = "input1";
//#endregion
// input1.js
//#region tests/fixtures/composite-refs-incremental/dir1/input1.ts
const input1 = "input1";
//#endregion
export { input1 };

// input2.d.ts
//#region tests/fixtures/composite-refs-incremental/dir2/input2.d.ts
export declare const input2 = "input2";
//#endregion
// input2.js
//#region tests/fixtures/composite-refs-incremental/dir2/input2.ts
const input2 = "input2";
//#endregion
export { input2 };
"
`;

exports[`tsc > composite references no incremental 1`] = `
"// input1.d.ts
//#region tests/fixtures/composite-refs-no-incremental/dir1/input1.d.ts
export declare const input1 = "input1";
//#endregion
// input1.js
//#region tests/fixtures/composite-refs-no-incremental/dir1/input1.ts
const input1 = "input1";
//#endregion
export { input1 };

// input2.d.ts
//#region tests/fixtures/composite-refs-no-incremental/dir2/input2.d.ts
export declare const input2 = "input2";
//#endregion
// input2.js
//#region tests/fixtures/composite-refs-no-incremental/dir2/input2.ts
const input2 = "input2";
//#endregion
export { input2 };
"
`;

exports[`tsc > import JSON 1`] = `
"// index.d.ts
declare namespace foo_json_d_exports {
  export { age, __json_default_export as default, name };
}
export declare let name: string;
export declare let age: number;
declare namespace __json_default_export {
  export { name, age };
}
declare namespace bar_json_d_exports {
  export { _exports$1 as default };
}
declare const _exports$1: string[];
declare namespace invalid_json_d_exports {
  export { __3 as "\\"", _11 as "1", __4 as "\\\\", ___2 as __, _class0 as class, _exports$2 as default };
}
declare const _exports$2: {
  class: string;
  "1": number;
  __: string;
  "\\"": string;
  "\\\\": string;
};
declare let _class0: typeof _exports$2["class"];
declare let _11: typeof _exports$2["1"];
declare let ___2: typeof _exports$2["__"];
declare let __3: typeof _exports$2["\\""];
declare let __4: typeof _exports$2["\\\\"];
//#endregion
//#region tests/fixtures/import-json/nested.json.d.ts
declare let openapi: string;
declare namespace info {
  let title: string;
  let version: string;
  let description: string;
  namespace license {
    let name: string;
    let url: string;
  }
}
declare namespace components {
  namespace schemas {
    namespace HttpStatus {
      export let type: string;
      let description_1: string;
      export { description_1 as description };
      let _enum: number[];
      export { _enum as enum };
    }
    namespace VovkErrorResponse {
      let type_1: string;
      export { type_1 as type };
      let description_2: string;
      export { description_2 as description };
      export namespace properties {
        namespace cause {
          let description_3: string;
          export { description_3 as description };
        }
        namespace statusCode {
          let $ref: string;
        }
        namespace message {
          let type_2: string;
          export { type_2 as type };
          let description_4: string;
          export { description_4 as description };
        }
        namespace isError {
          let type_3: string;
          export { type_3 as type };
          let _const: boolean;
          export { _const as const };
          let description_5: string;
          export { description_5 as description };
        }
      }
      export let required: string[];
      export let additionalProperties: boolean;
    }
  }
}
declare let paths: {
  "/api/users/{id}": {
    post: {
      summary: string;
      description: string;
      "x-codeSamples": {
        label: string;
        lang: string;
        source: string;
      }[];
      parameters: ({
        name: string;
        in: string;
        required: boolean;
        schema: {
          description: string;
          type: string;
          enum: string[];
          examples?: undefined;
          format?: undefined;
          pattern?: undefined;
        };
      } | {
        name: string;
        in: string;
        required: boolean;
        schema: {
          description: string;
          examples: string[];
          type: string;
          format: string;
          pattern: string;
          enum?: undefined;
        };
      })[];
      responses: {
        "200": {
          description: string;
          content: {
            "application/json": {
              schema: {
                $schema: string;
                description: string;
                type: string;
                properties: {
                  success: {
                    description: string;
                    type: string;
                  };
                };
                required: string[];
                additionalProperties: boolean;
              };
            };
          };
        };
      };
      requestBody: {
        description: string;
        required: boolean;
        content: {
          "application/json": {
            schema: {
              $schema: string;
              description: string;
              type: string;
              properties: {
                email: {
                  description: string;
                  examples: string[];
                  type: string;
                  format: string;
                  pattern: string;
                };
                profile: {
                  description: string;
                  type: string;
                  properties: {
                    name: {
                      description: string;
                      examples: string[];
                      type: string;
                    };
                    age: {
                      description: string;
                      examples: number[];
                      type: string;
                      minimum: number;
                      maximum: number;
                    };
                  };
                  required: string[];
                  additionalProperties: boolean;
                };
              };
              required: string[];
              additionalProperties: boolean;
            };
          };
        };
      };
    };
  };
  "/api/streams/tokens": {
    get: {
      summary: string;
      description: string;
      "x-codeSamples": {
        label: string;
        lang: string;
        source: string;
      }[];
      responses: {
        "200": {
          description: string;
          content: {
            "application/jsonl": {
              schema: {
                $schema: string;
                description: string;
                type: string;
                properties: {
                  message: {
                    description: string;
                    type: string;
                  };
                };
                required: string[];
                additionalProperties: boolean;
                examples: string[];
              };
            };
          };
        };
      };
    };
  };
  "/api/static/openapi.json": {
    get: {
      summary: string;
      description: string;
      "x-codeSamples": {
        label: string;
        lang: string;
        source: string;
      }[];
    };
  };
};
declare namespace __json_default_export$1 {
  export { openapi, info, components, paths };
}
//#endregion
//#region tests/fixtures/import-json/array-of-object.json.d.ts
declare const _exports: {
  key: string;
}[];
//#endregion
export { _exports as arrayOfObjects, _exports$1 as bar, bar_json_d_exports as barNs, __json_default_export as foo, foo_json_d_exports as fooNs, invalid_json_d_exports as invalidNs, __json_default_export$1 as nested };"
`;

exports[`tsc > jsdoc 1`] = `
"// jsdoc.d.ts
import { Plugin } from "rolldown";
//#region tests/fixtures/jsdoc.d.ts
/**
 * with imports
 */
export interface RollupMdiFontminOptions extends Plugin {}
/**
 * named export
 */
export declare function fn(): number;
/**
 * options
 */
export interface Options {
  /**
   * interface member
   */
  foo: string;
}
/**
 * type alias
 */
export type Foo = string;
/**
 * default export
 */
declare const _default: number;
//#endregion
export { _default as default };
// jsdoc.js
//#region tests/fixtures/jsdoc.ts
/**
* named export
*/
function fn() {
	return 42;
}
/**
* default export
*/
var jsdoc_default = fn();
//#endregion
export { jsdoc_default as default, fn };
"
`;

exports[`tsc > jsdoc members 1`] = `
"// jsdoc-members.d.ts
//#region tests/fixtures/jsdoc-members.d.ts
export declare const foo: string;
export interface A {
  /** Comment A1 */
  AA?: string;
  /** Comment A2 */
  AB?: string;
  /** Comment A3 */
  AC?: string;
}
export type B = {
  /** Comment B1 */
  BA?: string;
  /** Comment B2 */
  BB?: string;
  /** Comment B3 */
  BC?: string;
};
export declare function fn(): void;
//#endregion
// jsdoc-members.js
//#region tests/fixtures/jsdoc-members.ts
const foo = "foo";
function fn() {}
//#endregion
export { fn, foo };
"
`;

exports[`tsc > multi declarations 1`] = `
"// index.d.ts
//#region tests/fixtures/multi-decls/mod.d.ts
export declare const a: 1, b: 2;
//#endregion
//#region tests/fixtures/multi-decls/index.d.ts
declare const a$1 = 3, b$1 = 3;
//#endregion
export { a$1 as c, b$1 as d };"
`;

exports[`tsc > references 1`] = `
"// index.d.ts
//#region tests/fixtures/refs/src/index.d.ts
export declare const a = 1;
//#endregion
// index.js
//#region tests/fixtures/refs/src/index.ts
const a = 1;
//#endregion
export { a };
"
`;

exports[`tsc > rename infer 1`] = `
"// infer-renaming.d.ts
import { infer as __Infer, z } from "zod";
//#region tests/fixtures/infer-renaming.d.ts
export declare const productSchema: z.ZodObject<{
  id: z.ZodString;
  price: z.ZodNumber;
}, z.core.$strip>;
export declare const product: __Infer<typeof productSchema>;
//#endregion"
`;

exports[`tsc > resolve paths > resolver: oxc 1`] = `
"// index.d.ts
//#region tests/fixtures/paths/mod.d.ts
export declare const foo = 42;
//#endregion"
`;

exports[`tsc > resolve paths > resolver: tsc 1`] = `
"// index.d.ts
//#region tests/fixtures/paths/mod.d.ts
export declare const foo = 42;
//#endregion"
`;

exports[`tsc > typescript compiler 1`] = `
"// entry1.d.ts

export declare const str = "foo";
export declare const num = 42;
export declare const bool = true;
export declare function fn(arg: typeof str): "foo" | 1;
//#endregion
// entry2.d.ts

export interface Unused {
  foo: string;
}
//#endregion"
`;
